--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -106,7 +106,7 @@ Tajima's _D_, Fay and Wu's _H_, Fu and Li's _D_, Fu and Li's _F_, Zeng's _E_, an
 
 ### Disease Associated Genes
 
-Disease associated markers and their annotated genes were downloaded from the \gls{gwas} catalog^[https://www.ebi.ac.uk/gwas/, accessed 19 June 2017] [@MacArthur2017]  and filtered for association (chi-squared P < 5x10^-8^). Gene lists were then created for each of the following diseases or traits; urate and gout, \gls{t2d}, obesity, kidney disease, and metabolic syndrome by filtering the study disease trait on keywords (see section \@ref(diseaselist) for details). Table \@ref(tab:gwascatref) shows source disease trait and reference used to create categories of gene lists for gout/urate, obesity, \gls{t2d}, kidney disease, and metabolic syndrome. Selection test statistics values for each population were centred using the population median. The gene lists from these categories were used in Section \@ref(genelistcluster) for hierarchical clustering using the selection test statistic values for windows that intersected these gene regions. Complete linkage and Euclidean distance were used for the clustering.
+Disease associated markers and their annotated genes were downloaded from the \gls{gwas} catalog^[https://www.ebi.ac.uk/gwas/ accessed 19 June 2017] [@MacArthur2017]  and filtered for association (chi-squared P < 5x10^-8^). Gene lists were then created for each of the following diseases or traits; urate and gout, \gls{t2d}, obesity, kidney disease, and metabolic syndrome by filtering the study disease trait on keywords (see section \@ref(diseaselist) for details). Table \@ref(tab:gwascatref) shows source disease trait and reference used to create categories of gene lists for gout/urate, obesity, \gls{t2d}, kidney disease, and metabolic syndrome. Selection test statistics values for each population were centred using the population median. The gene lists from these categories were used in Section \@ref(genelistcluster) for hierarchical clustering using the selection test statistic values for windows that intersected these gene regions. Complete linkage and Euclidean distance were used for the clustering.
 
 (ref:gwascataccess) https://www.ebi.ac.uk/gwas/, accessed 19 June 2017
 
