--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -43,7 +43,9 @@
 
 \newacronym[description={Kilobases}]{kb}{kb}{kilobases}
 
+\newacronym[description={Hyperuricaemia}]{hu}{HU}{hyperuricaemia}
 \newacronym[description={Body mass index}]{bmi}{BMI}{body mass index}
+\newacronym[description={Cardio vascular disease}]{cvd}{CVD}{cardio vascular disease}
 \newacronym[description={Urate lowering therapy}]{ult}{ULT}{urate lowering therapy}
 \newacronym[description={Linkage disequilibrium}]{ld}{LD}{linkage disequilibrium}
 
@@ -51,7 +53,7 @@
 
 \newacronym[description={New Zealand}]{nz}{NZ}{New Zealand}
 \newacronym[description={Single nucleotide polymorphism}]{snp}{SNP}{single nucleotide polymorphism}
-
+\newacronym[description={Site frequency spectrum}]{sfs}{SFS}{site frequency spectrum}
 %\newacronym[description={Cook Island M\={a}ori}]{cim}{CIM}{Cook Island M\={a}ori}
 %\newacronym[description={New Zealand M\={a}ori}]{nzm}{NZM}{New Zealand M\={a}ori}
 %\newacronym[description={Tongan}]{ton}{TON}{Tongan}
