--- a/references.bib
+++ b/references.bib
@@ -3145,3 +3145,192 @@ url = {http://www.ncbi.nlm.nih.gov/pubmed/23415221},
 volume = {152},
 year = {2013}
 }
+
+@article{Merriman2015,
+abstract = {Genome-wide association studies that scan the genome for common genetic variants associated with phenotype have greatly advanced medical knowledge. Hyperuricemia is no exception, with 28 loci identified. However, genetic control of pathways determining gout in the presence of hyperuricemia is still poorly understood. Two important pathways determining hyperuricemia have been confirmed (renal and gut excretion of uric acid with glycolysis now firmly implicated). Major urate loci are SLC2A9 and ABCG2. Recent studies show that SLC2A9 is involved in renal and gut excretion of uric acid and is implicated in antioxidant defense. Although etiological variants at SLC2A9 are yet to be identified, it is clear that considerable genetic complexity exists at the SLC2A9 locus, with multiple statistically independent genetic variants and local epistatic interactions. The positions of implicated genetic variants within or near chromatin regions involved in transcriptional control suggest that this mechanism (rather than structural changes in SLC2A9) is important in regulating the activity of SLC2A9. ABCG2 is involved primarily in extra-renal uric acid under-excretion with the etiological variant influencing expression. At the other 26 loci, probable causal genes can be identified at three (PDZK1, SLC22A11, and INHBB) with strong candidates at a further 10 loci. Confirmation of the causal gene will require a combination of re-sequencing, trans-ancestral mapping, and correlation of genetic association data with expression data. As expected, the urate loci associate with gout, although inconsistent effect sizes for gout require investigation. Finally, there has been no genome-wide association study using clinically ascertained cases to investigate the causes of gout in the presence of hyperuricemia. In such a study, use of asymptomatic hyperurcemic controls would be expected to increase the ability to detect genetic associations with gout.},
+author = {Merriman, Tony R},
+doi = {10.1186/s13075-015-0609-2},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Merriman - 2015 - An update on the genetic architecture of hyperuricemia and gout.pdf:pdf},
+issn = {1478-6354},
+journal = {Arthritis Research {\&} Therapy},
+month = {apr},
+number = {1},
+pages = {98},
+title = {{An update on the genetic architecture of hyperuricemia and gout}},
+url = {http://arthritis-research.com/content/17/1/98},
+volume = {17},
+year = {2015}
+}
+
+@article{Merriman2011a,
+abstract = {Gout results from elevated urate concentrations in the blood (hyperuricaemia). When super-saturation of urate is reached, monosodium urate crystals form within the joint. In some individuals, these crystals elicit a painful self-limiting inflammatory response that is characteristic of acute gouty arthritis. The most important cause of hyperuricaemia is reduced excretion of uric acid in the urine. Uric acid excretion is coordinated by a suite of urate transport molecules expressed in the renal collecting tubules, and is a key physiological checkpoint in gout. Other checkpoints in gout are hepatic production of urate, monosodium urate crystal formation, and initiation of the acute inflammatory response. Genome-wide association scans for genes regulating serum urate concentrations have identified two major regulators of hyperuricaemia- the renal urate transporters SLC2A9 and ABCG2. The risk variants at each gene approximately double the risk for gout in people of Caucasian ancestry, with SLC2A9 also resulting in higher risk for gout in people of Polynesian ancestry, a diverse population characterized by a high prevalence of gout. Ongoing genetic association studies are identifying and confirming other genes controlling serum urate concentrations; although genome-wide association studies in gout per se await recruitment of suitable case sample sets.},
+author = {Merriman, Tony R and Dalbeth, Nicola},
+doi = {10.1016/j.jbspin.2010.02.027},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Merriman, Dalbeth - 2011 - The genetic basis of hyperuricaemia and gout.pdf:pdf},
+issn = {1778-7254},
+journal = {Joint, bone, spine : revue du rhumatisme},
+keywords = {ATP-Binding Cassette Transporters,ATP-Binding Cassette Transporters: genetics,Facilitative,Facilitative: genetics,Glucose Transport Proteins,Gout,Gout: ethnology,Gout: genetics,Humans,Hyperuricemia,Hyperuricemia: ethnology,Hyperuricemia: genetics,Neoplasm Proteins,Neoplasm Proteins: genetics},
+mendeley-groups = {Metabolic Syndrome/Gout},
+month = {jan},
+number = {1},
+pages = {35--40},
+pmid = {20472486},
+publisher = {Elsevier Masson SAS},
+title = {{The genetic basis of hyperuricaemia and gout.}},
+url = {http://www.sciencedirect.com/science/article/pii/S1297319X10000916 http://www.ncbi.nlm.nih.gov/pubmed/20472486},
+volume = {78},
+year = {2011}
+}
+
+
+@article{Waldner2009,
+abstract = {Autoimmune diseases are systemic or organ-specific disorders that are the result of an attack of the immune system against the body's own tissue. Development of autoimmune disease is generally avoided by distinct mechanisms that silence adaptive self-reactive T or B cells. The innate immune system is critically involved in the defense against pathogens and the induction of primary adaptive immune responses. Toll-like receptors (TLRs) are key receptors that activate the innate immunity in response to pathogen recognition. Recent data show that activation of innate immune cells such as dendritic cells (DCs) can break this state of tolerance and induce autoimmunity by priming autoreactive T cells. Here we review recent examples of how innate immune responses influence the adaptive immunity in the induction or regulation of autoimmune disease. ?? 2009.},
+author = {Waldner, Hanspeter},
+doi = {10.1016/j.autrev.2008.12.019},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S1568997209000020-main.pdf:pdf},
+isbn = {1873-0183 (Electronic)},
+issn = {15689972},
+journal = {Autoimmunity Reviews},
+keywords = {Autoimmune disease,Dendritic cells,Innate immune system,Susceptibility to autoimmunity,Toll-like receptors},
+number = {5},
+pages = {400--404},
+pmid = {19162250},
+publisher = {Elsevier B.V.},
+title = {{The role of innate immune responses in autoimmune disease development}},
+url = {http://dx.doi.org/10.1016/j.autrev.2008.12.019},
+volume = {8},
+year = {2009}
+}
+
+@article{Ayub2014c,
+abstract = {We have investigated the evidence for positive selection in samples of African, European, and East Asian ancestry at 65 loci associated with susceptibility to type 2 diabetes (T2D) previously identified through genome-wide association studies. Selection early in human evolutionary history is predicted to lead to ancestral risk alleles shared between populations, whereas late selection would result in population-specific signals at derived risk alleles. By using a wide variety of tests based on the site frequency spectrum, haplotype structure, and population differentiation, we found no global signal of enrichment for positive selection when we considered all T2D risk loci collectively. However, in a locus-by-locus analysis, we found nominal evidence for positive selection at 14 of the loci. Selection favored the protective and risk alleles in similar proportions, rather than the risk alleles specifically as predicted by the thrifty gene hypothesis, and may not be related to influence on diabetes. Overall, we conclude that past positive selection has not been a powerful influence driving the prevalence of T2D risk alleles.},
+annote = {From Duplicate 1 (Revisiting the thrifty gene hypothesis via 65 loci associated with susceptibility to type 2 diabetes. - Ayub, Qasim; Moutsianas, Loukas; Chen, Yuan; Panoutsopoulou, Kalliope; Colonna, Vincenza; Pagani, Luca; Prokopenko, Inga; Ritchie, Graham R S; Tyler-Smith, Chris; McCarthy, Mark I; Zeggini, Eleftheria; Xue, Yali)
+
+From Duplicate 1 ( 
+
+Revisiting the thrifty gene hypothesis via 65 loci associated with susceptibility to type 2 diabetes.
+
+- Ayub, Qasim; Moutsianas, Loukas; Chen, Yuan; Panoutsopoulou, Kalliope; Colonna, Vincenza; Pagani, Luca; Prokopenko, Inga; Ritchie, Graham R S; Tyler-Smith, Chris; McCarthy, Mark I; Zeggini, Eleftheria; Xue, Yali )
+
+
+
+
+From Duplicate 2 ( 
+
+
+Revisiting the thrifty gene hypothesis via 65 loci associated with susceptibility to type 2 diabetes.
+
+
+- Ayub, Qasim; Moutsianas, Loukas; Chen, Yuan; Panoutsopoulou, Kalliope; Colonna, Vincenza; Pagani, Luca; Prokopenko, Inga; Ritchie, Graham R S; Tyler-Smith, Chris; McCarthy, Mark I; Zeggini, Eleftheria; Xue, Yali )
+
+
+
+
+From Duplicate 2 ( 
+
+
+Revisiting the thrifty gene hypothesis via 65 loci associated with susceptibility to type 2 diabetes.
+
+
+- Ayub, Qasim; Moutsianas, Loukas; Chen, Yuan; Panoutsopoulou, Kalliope; Colonna, Vincenza; Pagani, Luca; Prokopenko, Inga; Ritchie, Graham R S; Tyler-Smith, Chris; McCarthy, Mark I; Zeggini, Eleftheria; Xue, Yali )
+
+
+
+From Duplicate 2 (Revisiting the thrifty gene hypothesis via 65 loci associated with susceptibility to type 2 diabetes. - Ayub, Qasim; Moutsianas, Loukas; Chen, Yuan; Panoutsopoulou, Kalliope; Colonna, Vincenza; Pagani, Luca; Prokopenko, Inga; Ritchie, Graham R S; Tyler-Smith, Chris; McCarthy, Mark I; Zeggini, Eleftheria; Xue, Yali)
+
+From Duplicate 2 ( 
+
+
+Revisiting the thrifty gene hypothesis via 65 loci associated with susceptibility to type 2 diabetes.
+
+
+- Ayub, Qasim; Moutsianas, Loukas; Chen, Yuan; Panoutsopoulou, Kalliope; Colonna, Vincenza; Pagani, Luca; Prokopenko, Inga; Ritchie, Graham R S; Tyler-Smith, Chris; McCarthy, Mark I; Zeggini, Eleftheria; Xue, Yali )
+
+
+
+
+From Duplicate 2 ( 
+
+
+Revisiting the thrifty gene hypothesis via 65 loci associated with susceptibility to type 2 diabetes.
+
+
+- Ayub, Qasim; Moutsianas, Loukas; Chen, Yuan; Panoutsopoulou, Kalliope; Colonna, Vincenza; Pagani, Luca; Prokopenko, Inga; Ritchie, Graham R S; Tyler-Smith, Chris; McCarthy, Mark I; Zeggini, Eleftheria; Xue, Yali )
+
+},
+author = {Ayub, Qasim and Moutsianas, Loukas and Chen, Yuan and Panoutsopoulou, Kalliope and Colonna, Vincenza and Pagani, Luca and Prokopenko, Inga and Ritchie, Graham R S and Tyler-Smith, Chris and McCarthy, Mark I and Zeggini, Eleftheria and Xue, Yali},
+doi = {10.1016/j.ajhg.2013.12.010},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ayub et al. - 2014 - Revisiting the thrifty gene hypothesis via 65 loci associated with susceptibility to type 2 diabetes.pdf:pdf;:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Ayub et al. - 2014 - Revisiting the thrifty gene hypothesis via 65 loci associated with susceptibility to type 2 diabetes(2).pdf:pdf},
+issn = {1537-6605},
+journal = {American journal of human genetics},
+keywords = {African Continental Ancestry Group,African Continental Ancestry Group: genetics,Alleles,Asian Continental Ancestry Group,Asian Continental Ancestry Group: genetics,Diabetes Mellitus,European Continental Ancestry Group,European Continental Ancestry Group: genetics,Gene Frequency,Genetic,Genetic Loci,Genetic Predisposition to Disease,Genome-Wide Association Study,Haplotypes,Humans,Polymorphism,Risk Factors,Selection,Single Nucleotide,Type 2,Type 2: epidemiology,Type 2: genetics},
+mendeley-groups = {PPARGC1Apaper,Selection/iHS},
+month = {feb},
+number = {2},
+pages = {176--85},
+pmid = {24412096},
+publisher = {The American Society of Human Genetics},
+title = {{Revisiting the thrifty gene hypothesis via 65 loci associated with susceptibility to type 2 diabetes.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/24412096},
+volume = {94},
+year = {2014}
+}
+
+@article{Chittoor2016,
+abstract = {BACKGROUND The variation in serum uric acid concentrations is under significant genetic influence. Elevated SUA concentrations have been linked to increased risk for gout, kidney stones, chronic kidney disease, and cardiovascular disease whereas reduced serum uric acid concentrations have been linked to multiple sclerosis, Parkinson's disease and Alzheimer's disease. Previously, we identified a novel locus on chromosome 3p26 affecting serum uric acid concentrations in Mexican Americans from San Antonio Family Heart Study. As a follow up, we examined genome-wide single nucleotide polymorphism data in an extended cohort of 1281 Mexican Americans from multigenerational families of the San Antonio Family Heart Study and the San Antonio Family Diabetes/Gallbladder Study. We used a linear regression-based joint linkage/association test under an additive model of allelic effect, while accounting for non-independence among family members via a kinship variance component. RESULTS Univariate genetic analysis indicated serum uric acid concentrations to be significant heritable (h (2) = 0.50 ± 0.05, p {\textless} 4 × 10(-35)), and linkage analysis of serum uric acid concentrations confirmed our previous finding of a novel locus on 3p26 (LOD = 4.9, p {\textless} 1 × 10(-5)) in the extended sample. Additionally, we observed strong association of serum uric acid concentrations with variants in following candidate genes in the 3p26 region; inositol 1,4,5-trisphosphate receptor, type 1 (ITPR1), contactin 4 (CNTN4), decapping mRNA 1A (DCP1A); transglutaminase 4 (TGM4) and rho guanine nucleotide exchange factor (GEF) 26 (ARHGEF26) [p {\textless} 3 × 10(-7); minor allele frequencies ranged between 0.003 and 0.42] and evidence of cis-regulation for ITPR1 transcripts. CONCLUSION Our results confirm the importance of the chromosome 3p26 locus and genetic variants in this region in the regulation of serum uric acid concentrations.},
+author = {Chittoor, Geetha and Kent, Jack W and Almeida, Marcio and Puppala, Sobha and Farook, Vidya S and Cole, Shelley A and Haack, Karin and G{\"{o}}ring, Harald H H and MacCluer, Jean W and Curran, Joanne E and Carless, Melanie A and Johnson, Matthew P and Moses, Eric K and Almasy, Laura and Mahaney, Michael C and Lehman, Donna M and Duggirala, Ravindranath and Comuzzie, Anthony G and Blangero, John and Voruganti, Venkata Saroja},
+doi = {10.1186/s12864-016-2594-5},
+file = {:home/murraycadzow/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Chittoor et al. - 2016 - GWAS and transcriptional analysis prioritize ITPR1 and CNTN4 for a serum uric acid 3p26 QTL in Mexican American.pdf:pdf},
+issn = {1471-2164},
+journal = {BMC genomics},
+keywords = {CNTN4,Family-based study,ITPR1,Joint linkage/association approach},
+number = {1},
+pages = {276},
+pmid = {27039371},
+publisher = {BMC Genomics},
+title = {{GWAS and transcriptional analysis prioritize ITPR1 and CNTN4 for a serum uric acid 3p26 QTL in Mexican Americans.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/27039371},
+volume = {17},
+year = {2016}
+}
+
+@article{buckley2006predators,
+author = {Buckley, Hallie R},
+file = {:home/murraycadzow/Dropbox/Papers/Bioarkelogi Asia Tenggara.pdf:pdf},
+journal = {Bioarchaeology of Southeast Asia. Cambridge: Cambridge University Press. p},
+pages = {309--332},
+title = {{The predators within: investigating the relationship between malaria and health in the prehistoric Pacific Islands}},
+year = {2006}
+}
+
+@article{Wen2017,
+author = {Wen, Yang-Jun and Zhang, Hanwen and Ni, Yuan-Li and Huang, Bo and Zhang, Jin and Feng, Jian-Ying and Wang, Shi-Bo and Dunwell, Jim M. and Zhang, Yuan-Ming and Wu, Rongling},
+doi = {10.1093/bib/bbw145},
+file = {:home/murraycadzow/Dropbox/Papers/bbw145.pdf:pdf},
+issn = {1467-5463},
+journal = {Briefings in Bioinformatics},
+keywords = {genome-wide association study,mixed linear model,multi-locus model,random effect},
+number = {October},
+pages = {1--13},
+title = {{Methodological implementation of mixed linear models in multi-locus genome-wide association studies}},
+url = {https://academic.oup.com/bib/article/2965637/Methodological},
+year = {2017}
+}
+
+@article{Albert2015,
+abstract = {Background: Recent evidence indicates the possible involvement of adenosine and the purinergic system in the pathophysiology of bipolar disorder (BD). The aim of this study is to compare serum uric acid (UA) levels in a large group of BD patients (in mania, depression and euthymia) vs. a control group of patients with different psychiatric disorders. Methods: 150 BD (SCID-I; DSM-IV) patients were compared to 150 age- and gender-matched subjects with MDD, OCD, or Schizophrenia. Mean serum UA values were compared with the ANOVA, with Bonferroni's post-hoc tests. Results: Mean serum UA levels (5.06 ± 1.45 vs. 4.17 ± 1.05 mg/dL) and rates of hyperuricaemia (30.7{\%} vs. 6.7{\%}) were signi.cantly higher in the bipolar than in the control group. No differences were detected between bipolars in different phases of illness, with all three groups (manic, depressive and euthymic bipolars) showing signi.cantly higher UA levels as compared to controls. No correlations were found between UA levels and YMRS or HAM-D scores. Mean UA levels were also higher in bipolars never exposed to mood stabilizers vs. controls (5.08 ± 1.43 vs. 4.17 ± 1.05 mg/dL), with no differences compared to other bipolars. Limitations: Our study suffers from the lack of a healthy comparison group; moreover, longitudinal data are missing. Conclusions: Our study provides further evidence of a purinergic dysfunction associated with BD, in all phases of the illness. It is possible that increased UA levels are a trait marker of higher vulnerability to bipolar disorder, and are even more increased during mania (mostly in the first manic episode of drug-na{\"{i}}ve patients).},
+author = {Albert, Umberto and {De Cori}, David and Aguglia, Andrea and Barbaro, Francesca and Bogetto, Filippo and Maina, Giuseppe},
+doi = {10.1016/j.jad.2014.11.005},
+file = {:home/murraycadzow/Dropbox/Papers/1-s2.0-S016503271400706X-main.pdf:pdf},
+isbn = {1573-2517},
+issn = {15732517},
+journal = {Journal of Affective Disorders},
+keywords = {Bipolar disorder,Mania,Uric acid},
+pages = {170--175},
+pmid = {25462413},
+publisher = {Elsevier},
+title = {{Increased uric acid levels in bipolar disorder subjects during different phases of illness}},
+url = {http://dx.doi.org/10.1016/j.jad.2014.11.005},
+volume = {173},
+year = {2015}
+}
